# 20241017-hackathon

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/hackathon/: __init__.py  app.py  main.py
templates/: index.html
