[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Nagata Kana", email = "ngtkana@gmail.com" }]
dependencies = [
    "langchain-google-vertexai>=2.0.5",
    "click>=8.1.7",
    "pandas>=2.2.3",
    "flask>=3.0.3",
    "langchain>=0.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_20241017_hackathon"]
